# stac-kit-europa-clipper

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml  pr.yml  publish.yml
ccsds/packets/europa_clipper/: __init__.py
ccsds/packets/europa_clipper/ecm/: fgx.py
ccsds/packets/europa_clipper/ecm/test/: __init__.py  test_ecm.py
ccsds/packets/europa_clipper/eisnac/: __init__.py
ccsds/packets/europa_clipper/eiswac/: __init__.py
ccsds/packets/europa_clipper/maspex/: __init__.py
ccsds/packets/europa_clipper/mise/: ancillary_fields.py  decompression_converter.py  frame_uncompressed_preparser.py
ccsds/packets/europa_clipper/pimsl/: __init__.py
ccsds/packets/europa_clipper/suda/: catalog_entries.py  catalog_list.py  event_wf.py  event_wf_metadata.py  rice_decompressor_converter.py
ccsds/packets/europa_clipper/suda/test/: __init__.py  test_suda.py
