[project]
name = "europa-clipper-ccsds-plugin"
version = "0.1.0"
description = "CCSDS packet definitions for Europa Clipper instruments"
authors = [
    {name = "Joshua Garde",email = "jgarde@jpl.nasa.gov"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "ccsdspy~=1.3.0",
    "tqdm~=4.66.1",
    "pandas~=2.3.3",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "ccsds" }
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "spac-kit~=0.2.0",
    "bitstring~=4.3.1",
    "flake8>=6.0.0,<7.0.0",
    "pylint~=3.3.9",
    "poetry~=2.2.1"
]

# extra configuration for poetry package managener
[poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
spac-kit = "~0.2.0"
bitstring = "~4.3.1"
flake8 = ">=6.0.0,<7.0.0"
pylint = "~3.3.9"
poetry = "~2.2.1"

[tool.poetry.extras]
dev = [
    "pytest",
    "spac-kit",
    "bitstring",
    "flake8",
    "pylint",
    "poetry"
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = [
    "W0201",  # attribute-defined-outside-init
    "R0801",  # Similar lines in 2 files
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
]
